Fixed spacing between "piece" row and other adventures row

--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ max-width: 1400px;
 padding-left: 40px;
 padding-right: 40px;
 margin-top: 60px;
+padding-bottom: 120px;
 }
 
 #container{
